--- a/0-basics/notebook.ipynb
+++ b/0-basics/notebook.ipynb
@@ -24,7 +24,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import tiktoken\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "\n",
@@ -54,6 +53,7 @@
    "outputs": [],
    "source": [
     "# embedding vector is constructed based on the word's context within a large corpus of text\n",
+    "\n",
     "vector = get_embedding(\"Milad\")"
    ]
   },
@@ -100,7 +100,8 @@
     "# Sentence as a vector typically involves combining the embeddings of individual words in the sentence\n",
     "\n",
     "vector = get_embedding(\"My name is Milad\")\n",
-    "print(vector)"
+    "print(vector)\n",
+    "len(vector)"
    ]
   }
  ],
