--- a/1-generate-embeddings/notebook.ipynb
+++ b/1-generate-embeddings/notebook.ipynb
@@ -53,6 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://www.kaggle.com/\n",
+    "# We use a dataset of Amazon reviews\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "# load & inspect dataset\n",
