--- a/5-Q&A demo/notebook.ipynb
+++ b/5-Q&A demo/notebook.ipynb
@@ -145,7 +145,7 @@
     " {delimiter}{generate_context(user_message)}{delimiter}\"\"\"},   \n",
     "]\n",
     "\n",
-    "print(messages)"
+    "display(messages)"
    ]
   },
   {
